Reduced code duplicates, fixed flickering panel

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,28 +58,6 @@ header {
     border-bottom: 0.1em solid #5b5fc7;
 }
 
-.add-project {
-    margin-left: auto;
-    font-size: 2.5em;
-    padding: .1em .4em;
-    background-color: #FBE9D3;
-    border-radius: 2em;
-    align-items: center;
-}
-
-.add-project svg {
-    width: 0.7em;
-    height: 0.7em;
-}
-
-.add-project:hover {
-    outline: 0.08em solid #f5f5f5;
-}
-
-.add-project:active {
-    outline: 0.08em solid #5b5fc7;
-}
-
 #projects {
     border-radius: 2em;
     background: url("../assets/images/home/bookshelf-background.jpg");
