--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -4,24 +4,3 @@ header {
     background-size: cover;
     background-position-y: -500px;
 }
-
-.add-tag {
-    margin-left: auto;
-    font-size: 2.5em;
-    padding: .1em .4em;
-    background-color: #FBE9D3;
-    border-radius: 2em;
-}
-
-.add-tag svg {
-    width: 0.7em;
-    height: 0.7em;
-}
-
-.add-tag:hover {
-    outline: 0.08em solid #f5f5f5;
-}
-
-.add-tag:active {
-    outline: 0.08em solid #5b5fc7;
-}
