--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,12 +43,36 @@ header {
     align-items: center;
 }
 
+.add-button {
+    margin-left: auto;
+    font-size: 2.5em;
+    padding: .1em .4em;
+    background-color: #FBE9D3;
+    border-radius: 2em;
+    box-shadow: 8px 8px 21px -7px rgba(0, 0, 0, 1);
+    align-items: center;
+}
+
+.add-button svg {
+    width: 0.7em;
+    height: 0.7em;
+}
+
+.add-button:hover {
+    outline: 0.08em solid #f5f5f5;
+}
+
+.add-button:active {
+    outline: 0.08em solid #5b5fc7;
+}
+
 .right-full {
     grid-column: 2;
     grid-row: 1 / span 2;
     max-width: 12em;
     height: fit-content;
     background-color: #FBE9D3;
+    box-shadow: 8px 8px 21px -7px rgba(0, 0, 0, 1);
     padding: 1em;
     border-radius: 2em;
     border-color: black;
